# video-codec-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  .~lock.video_codec_check_20250914_055337.csv#  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  check_video_codecs.py  check_video_codecs.sh  prisoner_avi_conversions.csv  pyproject.toml  release-notes-v0.7.0.md
.github/workflows/: ci.yml  opencode.yml
.opencode/command/: gitflow-feature-finish.md  gitflow-feature-start.md  gitflow-features.md  gitflow-hotfix-finish.md  gitflow-hotfix-start.md  gitflow-hotfixes.md  gitflow-init.md  gitflow-release-finish.md  gitflow-release-start.md  gitflow-releases.md  gitflow-status.md  review-comments-and-tasks.md
sample_config/: .env.example  check-video-codecs.yml
scripts/: convert_template.sh
tests/: test_config.py  test_ffmpeg_generator.py  test_main.py  test_video_processor.py
video_codec_checker/: __init__.py  cli.py  concurrency.py  config.py  csv_writer.py  ffmpeg_generator.py  main.py  models.py  script_writer.py  stats.py  video_processor.py
